Mobile formatting fixes + version 3 database code
- Fixed up the mobile formatting a little.
- Modified the styles so it no longer looks weird on ios devices.
- Added some back end code so the program can get the list of valid stock symbols.

--- a/experimental/page.css
+++ b/experimental/page.css
@@ -11,18 +11,16 @@ body
 
 h1
 {
+    background-color: #fff;
+    color: #1f1f1f;
     padding: 5px 10px;
     margin: auto;
-    width: 800px;
     text-align:center;
 }
 
 .header
 {
-    background-color: #fff;
-    color: #1f1f1f;
     display: block;
-    box-shadow: 0px 2px 10px 1px rgb(238,238,238,.2);
 }
 
 .body-div
@@ -30,13 +28,11 @@ h1
     padding: 0px 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 800px;
 }
 
 .form-div
 {
     padding: 10px 0px;
-    width: 400px;
     margin: 1em auto 0 auto;
     text-align: center;
 }
@@ -44,26 +40,24 @@ h1
 .stock-list
 {
     margin: 5 auto;
-    border: 3px solid rgb(238,238,238,.5);
-    width: 400px;
     border-radius: 10px;
-    padding: 0px 20px;
+    padding: 5px 20px;
     background-color: #fff;
+    max-width:350px;
 }
 
 .stock-market-list
 {
-    width: 400px;
+    text-align: center;
     margin: 5 auto;
 }
 
 .stock-market-box
 {
     display: inline-block;
-    border: 3px solid rgb(238,238,238,.5);
     border-radius: 10px;
     padding: 10px;
-    width: 100px;
+    width: 90px;
     margin: 5 auto;
     text-align: center;
     background-color: #fff;
@@ -75,7 +69,6 @@ h1
     height:60px;
     padding: 10px;
     margin: 5 auto;
-    width: 400px;
     text-align: center;
  }
  
